(FIX): Fixed overflow issue in the bottom

--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -9,7 +9,6 @@
 
   .logo {
     margin: auto 0;
-    margin-bottom: 24px;
     padding: 15px 0;
     padding-top: 0;
     height: 70px;
